--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "1.0.11",
     "com.unity.ide.vscode": "1.0.7",
     "com.unity.probuilder": "4.0.5",
+    "com.unity.render-pipelines.lightweight": "6.5.3",
     "com.unity.test-framework": "1.0.14",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.1.0",
